<resources>
    <string name="app_name">Mensagem</string>
    <string name="mensagem">Mensagem</string>
    <string name="enviar">Enviar</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="idade">Idade</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
</resources>
