<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/telefone"
    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
    android:layout_marginBottom="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/telefone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:textColorLink="#23283a" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:textColorLink="#23283a" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idade"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idade"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:textColorLink="#23283a" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/peso"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:textColorLink="#23283a" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/altura"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/altura"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:textColorLink="#23283a" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:onClick="enviaMensagem"
        android:text="@string/enviar" />


</LinearLayout>